# target-parquet

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: ci-tests.yml
src/: main.rs
target_parquet/: sinks.py  target.py  util.py  validator.py  writers.py
target_parquet/tests/: README.md  conftest.py  test_core.py  test_integration.py  test_integration_types.py  test_sinks.py  test_writers.py
